# EBox

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.MD  vcpkg.json
cmake/: config.cmake  libraries.cmake  post.cmake
defaults/: CHIP8.cfg  GB.cfg  chip8.cfg
docs/: CHIP8.MD
include/emulators/: all.h
include/emulators/chip8/: core.h  display.h  memory.h
include/emulators/chip8/display/: all.h  none.h  tui.h
include/emulators/gb/: core.h
include/emulators/ps1/: core.h
include/ui/: selector.h  window.h
include/utils/: all.h  color.h  dynarray.h  error.h  file.h  inifile.h  logging.h  memfree_list.h  message_box.h  tui.h
src/: main.c
src/emulators/chip8/: core.c  display.c  instructions.c  memory.c
src/emulators/chip8/display/: none.c  sdl.c  tui.c
src/emulators/gb/: core.c
src/emulators/ps1/: core.c
src/ui/: selector.c  window.c
src/utils/: color.c  dynarray.c  error.c  file.c  inifile.c  logging.c  memfree_list.c  message_box.c  tui.c
